Layout Test imported/w3c/web-platform-tests/IndexedDB/fire-error-event-exception.html is a Flaky Failure https://bugs.webkit.org/show_bug.cgi?id=201481 <rdar://problem/55046055>

Reviewed by Alex Christensen.

We should not schedule timer if we know the timer function will be no-op.

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::removeRequest):
(WebCore::IDBTransaction::scheduleOperation):
(WebCore::IDBTransaction::trySchedulePendingOperationTimer):
(WebCore::IDBTransaction::pendingOperationTimerFired):
(WebCore::IDBTransaction::didStart):
(WebCore::IDBTransaction::operationCompletedOnClient):
(WebCore::IDBTransaction::deactivate):
(WebCore::IDBTransaction::schedulePendingOperationTimer): Deleted.
* Modules/indexeddb/IDBTransaction.h:


Canonical link: https://commits.webkit.org/216068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250732 268f45cc-cd09-0410-ab3c-d52691b4dbfc